# stm32f4-hal

./: .gitignore  CMakeLists.txt  stm32f4xx_hal_conf.h.in
include/: stm32f4xx_hal_conf.h
